force-app/main/default/objects/Deal_Review__c/Deal_Review__c.object-meta.xml
<CustomObject>
    <description>Custom Object to facilitate the Deal Review process</description>
    <label>Deal Review</label>
    <nameField>
        <displayFormat>DR{YY}-{0000}</displayFormat>
        <label>Deal Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>