force-app/main/default/objects/Deal_Review__c/fields/Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration__c</fullName>
    <description>Captures details on complexities and key considerations that related to data migration</description>
    <inlineHelpText>Captures details on complexities and key considerations that related to data migration</inlineHelpText>
    <label>Data Migration</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>