force-app/main/default/objects/Deal_Review__c/fields/Deal_Cycle_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Cycle_Notes__c</fullName>
    <description>Include a link to the SE OneNote Notebook where the pursuit notes are captured. In the SE Notebook, right-click on the Account notes and choose &quot;Copy Link to Page&quot; and paste that link in this field.</description>
    <inlineHelpText>Include a link to the SE OneNote Notebook where the pursuit notes are captured. In the SE Notebook, right-click on the Account notes and choose &quot;Copy Link to Page&quot; and paste that link in this field.</inlineHelpText>
    <label>Deal Cycle Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>