force-app/main/default/objects/Deal_Review__c/fields/Deal_Desk_Channel__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Channel__c</fullName>
    <description>What channel are you requesting review from? The Standing Deal Desk meeting takes place every Tuesday and Thursday from 8:30-9:30 am MDT. If you are requesting ad-hoc, the Deal Desk facilitator will schedule the ad-hoc review on the date populated in the field titled Deal Desk Date</description>
    <inlineHelpText>What channel are you requesting review from? The Standing Deal Desk meeting takes place every Tuesday and Thursday from 8:30-9:30 am MDT. If you are requesting ad-hoc, the Deal Desk facilitator will schedule the ad-hoc review on the date populated in the field titled Deal Desk Date</inlineHelpText>
    <label>Deal Desk Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standing Deal Desk Meeting - 16 Business Hours</fullName>
            </value>
            <value>
                <fullName>Ad-hoc Deal Desk Meeting - 8 Business Hours</fullName>
            </value>
            <value>
                <fullName>Ad-hoc Deal Desk Meeting</fullName>
                <isActive>false</isActive>
                <label>Ad-hoc Deal Desk Meeting</label>
            </value>
            <value>
                <fullName>Standing Deal Desk Meeting</fullName>
                <isActive>false</isActive>
                <label>Standing Deal Desk Meeting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>