force-app/main/default/objects/Deal_Review__c/fields/Deal_Desk_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Date__c</fullName>
    <description>Captures the date for which you would like to present on Deal Desk. Deal Desk occurs every Tuesday and Thursday from 8:30-9:30 am MDT</description>
    <inlineHelpText>Captures the date for which you would like to present on Deal Desk. Deal Desk occurs every Tuesday and Thursday from 8:30-9:30 am MDT</inlineHelpText>
    <label>Deal Desk Date</label>
    <type>Date</type>
</CustomField>