force-app/main/default/objects/Deal_Review__c/fields/Deal_Desk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Notes__c</fullName>
    <description>Captures notes related to the Deal Review process (Company Overview, Key Risks, Areas To Be Reviewed, etc.)</description>
    <inlineHelpText>Captures notes related to the Deal Review process (Company Overview, Key Risks, Areas To Be Reviewed, etc.)</inlineHelpText>
    <label>Deal Desk Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>