force-app/main/default/objects/Deal_Review__c/fields/Deal_Desk_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Status__c</fullName>
    <description>Denotes the status of the Deal Desk request</description>
    <inlineHelpText>Denotes the status of the Deal Desk request</inlineHelpText>
    <label>Deal Desk Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Review Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>