force-app/main/default/objects/Deal_Review__c/fields/Deployments__c.field-meta.xml
<CustomField>
    <fullName>Deployments__c</fullName>
    <description>Captures details on complexities and key considerations that related to deployments</description>
    <inlineHelpText>Captures details on complexities and key considerations that related to deployments</inlineHelpText>
    <label>Deployments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>