force-app/main/default/objects/Deal_Review__c/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <description>Captures details on complexities and key considerations that related to development</description>
    <inlineHelpText>Captures details on complexities and key considerations that related to development</inlineHelpText>
    <label>Development</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>