force-app/main/default/objects/Deal_Review__c/fields/Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percent__c</fullName>
    <description>Captures the gross margin percent value on the margin calculator</description>
    <inlineHelpText>Captures the gross margin percent value on the margin calculator</inlineHelpText>
    <label>Gross Margin Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>