force-app/main/default/objects/Deal_Review__c/fields/Level_2_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Request_Status__c</fullName>
    <description>Denotes the status of the Level 2 Request</description>
    <inlineHelpText>Denotes the status of the Level 2 Request</inlineHelpText>
    <label>Level 2 Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>