force-app/main/default/objects/Deal_Review__c/fields/Level_2_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Review_Date__c</fullName>
    <description>This field captures the date Level 2 review was initiated. This field will auto-populate with a value when the record is saved and the field titled, Send Level 2 Request, is marked as true</description>
    <inlineHelpText>This field captures the date Level 2 review was initiated. This field will auto-populate with a value when the record is saved and the field titled, Send Level 2 Request, is marked as true</inlineHelpText>
    <label>Level 2 Review Date</label>
    <type>Date</type>
</CustomField>