force-app/main/default/objects/Deal_Review__c/fields/Level_2_SLA__c.field-meta.xml
<CustomField>
    <fullName>Level_2_SLA__c</fullName>
    <description>Captures the desired SLA for Level 2 review</description>
    <inlineHelpText>Captures the desired SLA for Level 2 review</inlineHelpText>
    <label>Level 2 SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent - 4 Business Hours</fullName>
            </value>
            <value>
                <fullName>Expedited - 8 Business Hours</fullName>
            </value>
            <value>
                <fullName>Standard - 16 Business Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>