force-app/main/default/objects/Deal_Review__c/fields/Level_4_Review_Channel__c.field-meta.xml
<CustomField>
    <fullName>Level_4_Review_Channel__c</fullName>
    <description>If your margin is &gt;58%, request Microsoft Teams as your review channel. If your margin is &lt;58%, you are required to attend the Standing Deal Desk meeting for review and approval</description>
    <inlineHelpText>If your margin is between &gt;58%, request Microsoft Teams as your review channel. If your margin is &lt;58%, you are required to attend the Standing Deal Desk meeting for review and approval</inlineHelpText>
    <label>Level 4 Review Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft Teams - 8 Business Hours</fullName>
            </value>
            <value>
                <fullName>Standing Deal Desk Meeting - 16 Business Hours</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Standing Deal Desk Meeting</fullName>
                <isActive>false</isActive>
                <label>Standing Deal Desk Meeting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>