force-app/main/default/objects/Deal_Review__c/fields/Margin_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Margin_Calculator__c</fullName>
    <description>Insert a link from the Margin Calculator into this field. All deal cycle documents are stored on Sales &amp; SE SharePoint site. Generate the link from the SharePoint site.</description>
    <inlineHelpText>Insert a link from the Margin Calculator into this field. All deal cycle documents are stored on Sales &amp; SE SharePoint site. Generate the link from the SharePoint site.</inlineHelpText>
    <label>Margin Calculator</label>
    <type>Url</type>
</CustomField>