force-app/main/default/objects/Deal_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Created a look up back to the Opportunity that is being scheduled for Deal Review</description>
    <inlineHelpText>Created a look up back to the Opportunity that is being scheduled for Deal Review</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Review</relationshipLabel>
    <relationshipName>Deal_Review</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>