force-app/main/default/objects/Deal_Review__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <description>Insert a link from the Proposal into this field. All deal cycle documents are stored on Sales &amp; SE SharePoint site. Generate the link from the SharePoint site.</description>
    <inlineHelpText>Insert a link from the Proposal into this field. All deal cycle documents are stored on Sales &amp; SE SharePoint site. Generate the link from the SharePoint site.</inlineHelpText>
    <label>Proposal</label>
    <type>Url</type>
</CustomField>