force-app/main/default/objects/Deal_Review__c/fields/Send_Level_4_Request__c.field-meta.xml
<CustomField>
    <fullName>Send_Level_4_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is marked true, a workflow will initiate your request for Deal Desk scheduling. IMPORTANT: This field is required, if it is not filled out, your request will not be received.</description>
    <inlineHelpText>If this field is marked true, a workflow will initiate your request for Deal Desk scheduling. IMPORTANT: This field is required, if it is not filled out, your request will not be received.</inlineHelpText>
    <label>Send Level 4 Request</label>
    <type>Checkbox</type>
</CustomField>