force-app/main/default/objects/Deal_Review__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <description>Insert a link from the SOW into this field. All deal cycle documents are stored on Sales &amp; SE SharePoint site. Generate the link from the SharePoint site.</description>
    <inlineHelpText>Insert a link from the SOW into this field. All deal cycle documents are stored on Sales &amp; SE SharePoint site. Generate the link from the SharePoint site.</inlineHelpText>
    <label>SOW</label>
    <type>Url</type>
</CustomField>